--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,5 @@ project(Tetris)
 
 set(CMAKE_CXX_STANDARD 17)
 # add the executable
-add_executable(Tetris.out main.cpp block.cpp board.cpp shape.cpp)
+add_executable(Tetris.out main.cpp block.cpp board.cpp shape.cpp timer.cpp)
 target_link_libraries(Tetris.out ncurses)
