Renamed 2 classes and merged 2 classes to one

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_STANDARD 17)
 # add the executable
 
 include_directories(include/)
-add_executable(Tetris.out src/main.cpp src/block.cpp src/board.cpp src/shape.cpp src/timer.cpp src/ui.cpp src/screenHandler.cpp src/square.cpp)
+add_executable(Tetris.out src/main.cpp src/tetromino.cpp src/game.cpp src/timer.cpp src/ui.cpp src/screenHandler.cpp src/square.cpp)
 
 #File for profiler
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pg")
@@ -15,6 +15,6 @@ SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pg")
 SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -pg")
 add_compile_options(-pg -no-pie -fno-builtin)
 
-add_executable(TetrisProfiler.out src/main.cpp src/block.cpp src/board.cpp src/shape.cpp src/timer.cpp src/ui.cpp src/screenHandler.cpp src/square.cpp)
+add_executable(TetrisProfiler.out src/main.cpp src/tetromino.cpp src/game.cpp src/timer.cpp src/ui.cpp src/screenHandler.cpp src/square.cpp)
 target_link_libraries(Tetris.out ncurses)
 target_link_libraries(TetrisProfiler.out ncurses)
