Added many gcc flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,5 +22,5 @@ target_include_directories(TetrisProfiler.out PRIVATE ${INCLUDE_DIR})
 target_link_libraries(TetrisProfiler.out ncurses)
 
 # Profiling options for the profiler build
-target_compile_options(TetrisProfiler.out PRIVATE -pg -no-pie -fno-builtin)
+target_compile_options(TetrisProfiler.out PRIVATE -pg -no-pie -fno-builtin -Werror -Wpedantic -Wuninitialized -Wredundant-decls -Wfloat-equal -Wall -Wextra -Wcast-qual -Wconversion -Wshadow -Wunused-parameter -Wwrite-strings -Wno-variadic-macros)
 target_link_options(TetrisProfiler.out PRIVATE -pg)
